Finally I know how to writing.

--- a/example.bib
+++ b/example.bib
@@ -616,7 +616,9 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     journal = {J. Phys. (Paris)},
     year = {1984},
     volume = {45},
-    pages = {C7-13-C7-30}
+    pages = {C7-13--C7-30},
+    doi = {10.1051/jphyscol:1984702},
+    url = {https://doi.org/10.1051/jphyscol:1984702}
 }
 @ARTICLE{Stanley2000,
     author = {H. E. Stanley and  S. V. Buldyrev and O. Mishima and M. R. Sadr-Lahijany and A. Scala and F. W. Starr},
@@ -3815,7 +3817,7 @@ journal = {Nature},
 doi ={https://doi.org/10.1038/369471a0},
 year = {1994},
 volume = {369},
-pages = {471-473},
+pages = {471--473},
 abstract= {{The timescale of the response of solvent molecules to electronic rearrangement of 
 solute molecules has a critical influence on the rates of chemical reactions in liquids. 
 In particular, if the solvent cannot adapt quickly enough to this rearrangement as the 
@@ -6770,14 +6772,6 @@ year = {1984}
     volume = {55},
     pages = {2471}
 }
-@ARTICLE{JMD,
-    author = {J. M. Dickey and A. Paskin},
-    title = {{Computer Simulation of the Lattice Dynamics of Solids}},
-    journal = {Phys. Rev.},
-    year = {1969},
-    volume = {188},
-    pages = {1407}
-}
 @ARTICLE{Perry03,
     author = {A. Perry and H. Ahoborn and B. Space and P. B. Moore},
     title = {{A Combined Time Correlation Function and Instantaneous Normal Mode Study of the Sum Frequency Generation Spectroscopy of the Water/Vapor Interface}},
@@ -8738,7 +8732,7 @@ number ={11},
 pages = {5987-5997}
 }
 @ARTICLE{Benjamin2005,
-author = {Ilan Benjamin},
+author = {Benjamin, Ilan},
 title = {{Hydrogen Bond Dynamics at Water/Organic Liquid Interfaces}},
 journal = {J. Phys. Chem. B},
 year = {2005},
@@ -8747,7 +8741,7 @@ number ={28},
 pages = {13711-13715}
 }
 @ARTICLE{Nandi2017,
-author = {Prithwish K. Nandi and Niall J. English and Zdenek Futera and Antonio Benedetto},
+author = {Nandi,Prithwish K. and English,Niall J. and Futera, Zdenek  and Benedetto, Antonio},
 title = {{Hydrogen-Bond Dynamics at the Bio-Water Interface in Hydrated Proteins: A Molecular-Dynamics Study}},
 journal = {Phys. Chem. Chem. Phys.},
 year = {2017},
@@ -8962,7 +8956,7 @@ eprint = {
         https://doi.org/10.1063/1.4811270   
 }
 }
-@ARTICLE{Jedlovszky04,
+@ARTICLE{Jedlovszky2004,
 author = {Jedlovszky,P. and Vincze, \'A. and Horvai, G.},
 title = {{Full description of the orientational statistics of molecules near to interfaces. Water at the interface with CCl$_4$}},
 journal = {Phys. Chem. Chem. Phys.},
@@ -9546,8 +9540,8 @@ year = {1963},
 volume = {35},
 number ={1},
 pages = {23},
-doi={},
-URL= {}
+doi={10.1103/RevModPhys.35.23},
+URL= {https://doi.org/10.1103/RevModPhys.35.23}
 }
 @ARTICLE{Shen2020,
 author = {Shen, Y. R.},
@@ -9573,113 +9567,508 @@ doi = {10.1103/PhysRevB.33.8254}
 url = {https://journals.aps.org/prb/abstract/10.1103/PhysRevB.33.8254},
 abstract= {{}}
 }
+@ARTICLE{Benjamin1996,
+author = {Benjamin, Ilan},
+title = {{Chemical Reactions and Solvation at Liquid Interfaces: A Microscopic Perspective}},
+journal = {Chem. Rev.},
+year = {1996},
+volume = {96},
+number ={4},
+pages = {1449--1476},
+doi = {10.1021/cr950230+},
+url = {https://doi.org/10.1021/cr950230+}
+}
+@BOOK{Shen2016,
+author = {Shen, Y. R.},
+title = {{Fundamentals of Sum-Frequency Spectroscopy}},
+publisher = {Cambridge University Press},
+year = {2016}
+}
+@ARTICLE{Kobe1982,
+author = {Kobe,Donald H.},
+title = {{Gauge transformations and the electric dipole approximation}},
+journal = {Am. J. Phys.},
+year = {1982},
+volume = {50},
+number ={2},
+pages = {128},
+doi={10.1119/1.13029},
+url={https://doi.org/10.1119/1.13029},
+abstract= {{ }}
+}
+@ARTICLE{HuaWei2013,
+author = {Hua, Wei and Verreault, Dominique and Allen, Heather C.},
+title = {{Surface prevalence of perchlorate anions at the air/aqueous interface}},
+journal = {J. Phys. Chem. Lett.},
+year = {2013},
+volume = {4},
+number = {},
+pages = {4231--4236},
+doi = {10.1021/jz402009f},
+url = {https://doi.org/10.1021/jz402009f},
+abstract = {{ }}
+}
+@ARTICLE{Pattle1954,
+author = {Pattle, R. E.},
+title = {{Production of electric power by mixing fresh and salt water in the hydroelectric pile}},
+journal = {Nature},
+year = {1954},
+volume = {174},
+number ={},
+pages = {660},
+doi = {10.1038/174660a0},
+url = {https://www.nature.com/articles/174660a0},
+abstract= {{}}
+}
+@ARTICLE{Loeb1976,
+author = {Loeb, S. and van Hessen, F. and Levi, J. and Ventura, M.},
+title = {{The osmotic power plant}},
+journal = {Science},
+year = {1976},
+volume = {189},
+number ={4203},
+pages = {654--655},
+doi = {10.1126/science.189.4203.654},
+abstract= {{ }}
+}
+@ARTICLE{Nihonyanagi2013,
+author = {Nihonyanagi, Satoshi and Mondal, Jahur A. and Yamaguchi, Shoichi and Tahara, Tahei},
+title = {{Structure and Dynamics of Interfacial Water Studied by Heterodyne-Detected Vibrational Sum-Frequency Generation}},
+journal = {Annu. Rev. Phys. Chem.},
+year = {2013},
+volume = {64},
+number ={},
+pages = {579--603},
+doi = {10.1146/annurev-physchem-040412-110138},
+url = {https://www.annualreviews.org/doi/abs/10.1146/annurev-physchem-040412-110138},
+abstract= {{}}
+}
+@ARTICLE{Nihonyanagi2009,
+author = {Nihonyanagi, Satoshi and Yamaguchi, Shoichi and Tahara,Tahei},
+title = {{Direct evidence for orientational flip-flop of water molecules at charged interfaces: A heterodyne-detected vibrational sum frequency generation study}},
+journal = {J. Chem. Phys.},
+year = {2009},
+volume = {130},
+number ={},
+pages = {204704},
+doi = {10.1063/1.3135147},
+url = {https://doi.org/10.1063/1.3135147},
+abstract= {{ }}
+}
+@ARTICLE{Shen2013,
+author = {Shen, Y. R.},
+title = {{Phase-sensitive sum-frequency spectroscopy}},
+journal = {Annu. Rev. Phys. Chem.},
+year = {2013},
+volume = {64},
+number ={},
+pages = {129--150},
+doi = {10.1146/annurev-physchem-040412-110110},
+url = {https://doi.org/10.1146/annurev-physchem-040412-110110},
+abstract= {{ }}
+}
+@ARTICLE{Ji2008,
+author = {Ji,N. and Ostroverkhov, V. and Tian, C.S. and  Shen, Y. R.},
+title = {{Characterization of vibrational resonances
+of water-vapor interfaces by phase-sensitive sum-frequency spectroscopy}},
+journal = {Phys. Rev. Lett.},
+year = {2008},
+volume = {100},
+number ={},
+pages = {096102},
+doi = {10.1103/PhysRevLett.100.096102},
+url = {https://doi.org/10.1103/PhysRevLett.100.096102},
+abstract= {{ }}
+}
+@ARTICLE{TianCS2009,
+author = {Tian, C. S. and Shen, Y. R.},
+title = {{Sum-frequency vibrational spectroscopic studies of water interfaces}},
+journal = {Chem. Phys. Lett.},
+year = {2009},
+volume = {470},
+number ={},
+pages = {1--6},
+doi = {10.1016/j.cplett.2009.01.016},
+url = {https://doi.org/10.1016/j.cplett.2009.01.016},
+abstract= {{ }}
+}
+@ARTICLE{Goharzadeh2005,
+author = {Goharzadeh, Afshin and Arzhang, Khalili and J{\o}rgensen, Bo Barker},
+title = {{Thansition Layer Thickness at a Fluid-porous Interface}},
+journal = {Phys. Fluids},
+year = {2005},
+volume = {17},
+number ={},
+pages = {057102},
+doi = {10.1063/1.1894796},
+url = {https://doi.org/10.1063/1.1894796}
+}
+@ARTICLE{LiZhihong2001,
+author = {Li,Zhi Hong and Gang, Yan Jun and Pu, Ming and Wu, Dong and Sun, Yu Han and Wang, Jun and Liu, Yi an Dong, Bao Zhong},
+title = {{Determination of Interface Layer Thickness
+of a Pseudo Two-phase System by Extension of the Debye Equation}},
+journal = {J. Phys. D: Appl. Phys.},
+year = {2001},
+volume = {34},
+number ={},
+pages = {2085--2088},
+doi = {10.1088/0022-3727/34/14/301},
+url = {https://doi.org/10.1088/0022-3727/34/14/301}
+}
+@ARTICLE{Bano2006,
+author = {B{\'a}n{\'o}, Mikul{\'a}{\v s} and Marek, Jozef},
+title = {{How thick is the layer of thermal volume surrounding the protein?}},
+journal = {BioPhys. Chem.},
+year = {2006},
+volume = {120},
+number ={1},
+pages = {44--54},
+doi = {10.1016/j.bpc.2005.09.024},
+url = {https://doi.org/10.1016/j.bpc.2005.09.024}
+}
+@ARTICLE{Arakawa1985,
+author = {Arakawa, T. and Timasheff, S. N.},
+title = {{The stabilization of proteins by osmolytes}},
+journal = {Biophys. J.},
+year = {1985},
+volume = {47},
+number ={},
+pages = {411--414},
+doi = {10.1016/S0006-3495(85)83932-1},
+url = {https://doi.org/10.1016/S0006-3495(85)83932-1}
+}
+@ARTICLE{Timasheff2002,
+author = {Timasheff, S. N.},
+title = {{Protein – solvent preferential interactions, protein hydra-
+tion, and the modulation of biochemical reactions by solvent components}},
+journal = {Proc. Natl. Acad. Sci. U. S. A.},
+year = {2002},
+volume = {99},
+number ={},
+pages = {9276--9721},
+doi = {10.1073/pnas.122225399},
+url = {https://doi.org/10.1073/pnas.122225399}
+}
+@ARTICLE{Hritz2004,
+author = {Hritz, J. and Ulicny, J. and Laaksonen, A. and Jancura, D. and Miskovsky, P},
+title = {{Molecular interaction model for the C1B domain of protein kinase C-$\gamma$ in the complex with its activator phorbol-12-myristate-13-acetate in water solution and lipid bilayer}},
+journal = {J. Med. Chem.},
+year = {2004},
+volume = {47},
+number ={},
+pages = {6547--6555},
+doi = {10.1021/jm049786s},
+url = {https://doi.org/10.1021/jm049786s}
+}
+@ARTICLE{Webb2001,
+author = {Webb, J. N. and Webb, S. D. and Cleland, J. L. and Carpenter, J. F. and Randolph, T. W.},
+title = {{Partial molar volume, surface area, and hydration changes for equilibrium unfolding and formation of aggregation transition state: high-pressure and cosolute studies on recombinant human IFN-$\gamma$}},
+journal = {Proc. Natl. Acad. Sci. U. S. A.},
+year = {2001},
+volume = {98},
+number ={},
+pages = {7259--7264},
+doi = {10.1073/pnas.131194798},
+url = {https://doi.org/10.1073/pnas.131194798}
+}
+@article{Singh2013,
+author = {Singh,Prashant Chandra  and Nihonyanagi,Satoshi and Yamaguchi,Shoichi and Tahara,Tahei},
+title = {Communication: Ultrafast vibrational dynamics of hydrogen bond network terminated at the air/water interface: A two-dimensional heterodyne-detected vibrational sum frequency generation study},
+journal = {J. Chem. Phys.},
+volume = {139},
+number = {16},
+pages = {161101},
+year = {2013},
+doi = {10.1063/1.4826095},
+URL = {https://doi.org/10.1063/1.4826095}
+}
+@ARTICLE{Narayan2005,
+author = {Sridhar Narayan and John Muldoon and  M. G. Finn and Valery V. Fokin and Hartmuth C. Kolb, and K. Barry Sharpless},
+title = {{“On Water”: Unique Reactivity of OrganicCompounds in Aqueous Suspension}},
+journal = {Angew. Chem. Int. Ed.},
+year = {2005},
+volume = {44},
+number ={},
+pages = {3275--3279},
+doi = {10.1002/anie.200462883},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1002/anie.200462883}
+}
+@ARTICLE{Rideout1980,
+author = {Rideout, Darryl C. and Breslow, Ronald},
+title = {{Hydrophobic acceleration of Diels-Alder reactions}},
+journal = {J. Am. Chem. Soc},
+year = {1980},
+volume = {102},
+number ={26},
+pages = {7816--7817},
+doi = {10.1021/ja00546a048},
+url = {https://doi.org/10.1021/ja00546a048}
+}
+@article{Dinpajooh2016,
+author = {Dinpajooh,Mohammadhasan  and Matyushov,Dmitry V. },
+title = {Dielectric constant of water in the interface},
+journal = {J. Chem. Phys.},
+volume = {145},
+number = {1},
+pages = {014504},
+year = {2016},
+doi = {10.1063/1.4955203},
+URL = {https://doi.org/10.1063/1.4955203}
+}
+@article{Beattie2010,
+author = {Beattie, James K. and McErlean, Christopher S. P. and Phippen, Christopher B. W.},
+title = {The Mechanism of On-Water Catalysis},
+journal = {Chem. A European Journal},
+volume = {16},
+number = {30},
+pages = {8972--8974},
+keywords = {biphasic catalysis, cycloaddition, green chemistry, interfaces, water chemistry},
+doi = {https://doi.org/10.1002/chem.201001705},
+url = {https://chemistry-europe.onlinelibrary.wiley.com/doi/abs/10.1002/chem.201001705},
+abstract = {Acid catalysis by interfacial water: A new mechanism is proposed for on-water catalysis, the acceleration of organic reactions when conducted in aqueous emulsions. It involves the protonation of a substrate by water, driven by the strong adsorption of hydroxide ions at aqueous interfaces with oils. This accounts for the specific role of water, and a deuterium isotope effect, at the interface, on reactions known to be acid-catalysed.},
+year = {2010}
+}
+
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
 }
 @ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
-year = {},
+year = {20},
 volume = {},
 number ={},
 pages = {},
-abstract= {{ }}
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
+
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
 }
