--- a/example.bib
+++ b/example.bib
@@ -1,10 +1,3 @@
-@BOOK{,
-  title = {},
-  publisher = {},
-  year = {19},
-  author = {},
-  address = {}
-} 
 @BOOK{Veziriglu1990,
   title = {EnVironmental Problems and Solutions: Greenhouse Effect, Acid Rain, Pollution},
   publisher = {Hemisphere},
@@ -9357,7 +9350,7 @@ number ={5},
 pages = {1422--1426}
 }
 @ARTICLE{Marcelja04,
-author = {Mar{\v c}elja, S.},
+author = {Mar\v{c}elja, S.},
 title = {{Short-range forces in surface and bubble interaction}},
 journal = {Curr. Opin. Colloid Interface Sci.},
 year = {2004},
@@ -9568,7 +9561,7 @@ doi = {10.1088/0022-3727/34/14/301},
 url = {https://doi.org/10.1088/0022-3727/34/14/301}
 }
 @ARTICLE{Bano2006,
-author = {B{\'a}n{\'o}, Mikul{\'a}{\v s} and Marek, Jozef},
+author = {B\'{a}n\'{o}, Mikul\'{a}\v{s} and Marek, Jozef},
 title = {{How thick is the layer of thermal volume surrounding the protein?}},
 journal = {BioPhys. Chem.},
 year = {2006},
