--- a/main.tex
+++ b/main.tex
@@ -455,16 +455,16 @@ I thank Prof. Yuliang Jin for his support, trust and teachings over the past yea
 
 %
 I would like to thank the following teachers who have benefited me for life:
-Mr. Yiyou Li, Mr. Yongliang Lu, Mr. Keyuan Zhong, 
-Mr. Bing Yang, Mr. Jiexian Chen, Mr. Yiji Li, Mr. Jiangen Chen, Mr. Jiang Wu, Mr. Sheng Ma, Mr. Jian Liang, Mr. Qichun Hu, Mr. Zengquan Jiang, 
-Mr. Xiukui Wu, Mr. Shichun Huang, Mr. Wende Zhou, Mr. Wenfeng Chen, Mr. Changchun Liao, 
-Mr. Zhengzhou Yan, Mr. Pingchuan Xu, Ms. Ruibin Huang, Mr. Yong Huang, Ms. Meiying Huang, Mr. Zhiquan Luo, Mr. Caide Tao, Mr. Silin Fan, Ms. Qiyin Ran, Mr. Weiyi Ren, Mr. Weiping Li,
-Mr. Lei Tan, Mr. Yuxiao Liu, Mr. Honggang Luo.
+Mr. Yiyou Li, Mr. Yongliang Lu,  
+Mr. Bing Yang, Mr. Jiexian Chen, Mr. Yiji Li, Mr. Jiangen Chen, Mr. Jian Liang, Mr. Zengquan Jiang, 
+Mr. Xiukui Wu, Mr. Wende Zhou, Mr. Wenfeng Chen, 
+Mr. Zhengzhou Yan, Mr. Pingchuan Xu, Ms. Ruibin Huang, Ms. Qiyin Ran, Mr. Yong Huang, Mr. Zhiquan Luo, Mr. Silin Fan, Mr. Caide Tao, Mr. Weiyi Ren, Mr. Weiping Li,
+Mr. Lei Tan, Mr. Yuxiao Liu, Mr. Jirong Ren, Mr. Honggang Luo.
 
 %
 I am grateful to my dear parents Yuhua Diao and Dehuai Huang, and my dear brother Jialiang, for their care, 
 understanding and support for me for decades. 
-This thesis is dedicated to my dear grandmother Yuqing Zhong, the late grandparents Zongyin Huang, Sufang Ma, and Chunwen Diao. 
+This thesis is dedicated to my dear grandmother Yuqing Zhong, the late grandparents Zongyin Huang, Sufang Ma, and Shengwen Diao. 
 I will always remember the kindness, open-mindedness, diligence and perseverance that grows deep in their hearts.
 
 \end{acknowledgements}
