--- a/example.bib
+++ b/example.bib
@@ -470,7 +470,7 @@
     title = {{The Structure and Properties of Water}},
     year = {1969},
     publisher = {Oxford University press, Oxford},
-    ISBN = {ISBN: 9780198570264},
+    ISBN = {ISBN:9780198570264},
     url = {https://global.oup.com/academic/product/the-structure-and-properties-of-water-9780198570264?cc=cn&lang=en&#}
 }
 @article{Teixeira1993,
@@ -1242,7 +1242,7 @@ URL = {https://doi.org/10.1063/1.464521},
     volume = {70},
     doi = {10.1080/00268979000101451},
     URL = {https://doi.org/10.1080/00268979000101451},
-    publisher = {Taylor & Francis},
+    publisher = {Taylor \& Francis},
     pages = {921--966}
 }
 @ARTICLE{MCP92,
@@ -1315,17 +1315,18 @@ URL = {https://doi.org/10.1063/1.464521},
     volume = {75},
     pages = {1057-1066}
 }
-@ARTICLE{FPBJ,
-    author = {B. J. Finlayson-Pitts},
+@ARTICLE{Pitts2003,
+    author = {Finlayson-Pitts, B. J.},
     title = {{The Tropospheric Chemistry of Sea Salt: A Molecular-Level View of the Chemistry of NaCl and NaBr}},
     journal = {Chem. Rev.},
     year = {2003},
     volume = {103},
-    doi = {},
+    doi = {10.1021/cr020653t},
+    url = {https://doi.org/10.1021/cr020653t},
     pages = {4801}
 }
-@BOOK{BJ,
-    author = {B. J. Finlayson-Pitts and J. N. Pitts Jr.},
+@BOOK{Pitts2000,
+    author = {Finlayson-Pitts, B. J. and J. N. {Pitts Jr.}},
     title = {{Chemistry of the Upper and Lower Atmosphere: Theory, Experiments and Applications}},
     year = {2000},
     publisher = {Academic Press: San Diego,CA}
@@ -9661,17 +9662,15 @@ doi = {10.1063/1.4955203},
 URL = {https://doi.org/10.1063/1.4955203}
 }
 @article{Beattie2010,
-author = {Beattie, James K. and McErlean, Christopher S. P. and Phippen, Christopher B. W.},
+author = {Beattie, James K. and McErlean, Christopher S. P. and Phippen, Christopher B. W.},
 title = {The Mechanism of On-Water Catalysis},
 journal = {Chem. A European Journal},
 volume = {16},
 number = {30},
 pages = {8972--8974},
-keywords = {biphasic catalysis, cycloaddition, green chemistry, interfaces, water chemistry},
-doi = {https://doi.org/10.1002/chem.201001705},
-url = {https://chemistry-europe.onlinelibrary.wiley.com/doi/abs/10.1002/chem.201001705},
-abstract = {Acid catalysis by interfacial water: A new mechanism is proposed for on-water catalysis, the acceleration of organic reactions when conducted in aqueous emulsions. It involves the protonation of a substrate by water, driven by the strong adsorption of hydroxide ions at aqueous interfaces with oils. This accounts for the specific role of water, and a deuterium isotope effect, at the interface, on reactions known to be acid-catalysed.},
-year = {2010}
+year = {2010},
+doi = {10.1002/chem.201001705},
+url = {https://doi.org/10.1002/chem.201001705}
 }
 @ARTICLE{Manciu2003,
 author = {Manciu, Marian and Ruckenstein, Eli},
