--- a/main.tex
+++ b/main.tex
@@ -682,10 +682,10 @@ $\nu$ & vibrational frequency, or  vibrational quantum number& \\
 
 \appendix % Cue to tell LaTeX that the following "chapters" are Appendices
 
-% Include the appendices of the thesis as separate files from the Appendices folder
-% Uncomment the lines as you write the Appendices
+%% Include the appendices of the thesis as separate files from the Appendices folder
+%% Uncomment the lines as you write the Appendices
 
-%\include{Appendices/AppendixA}
+%%\include{Appendices/AppendixA}
 \include{chapters/chap_susceptibility/chap_susceptibility}
 \include{chapters/chap_simulations/chap_simulations}
 \include{chapters/chap_structure/chap_structure}
