--- a/example.bib
+++ b/example.bib
@@ -3415,7 +3415,7 @@ in gas and condensed phases}},
     volume = {100},
     pages = {146401}
 }
-@ARTICLE{EAR04,
+@ARTICLE{Raymond2004,
  author = {E. A. Raymond and G. L. Richmond},
     title = {{Probing the Molecular Structure and Bonding of the Surface of Aqueous Salt Solutions}},
     journal = {J. Phys. Chem. B},
@@ -9682,38 +9682,42 @@ pages = {63--101},
 doi = {10.1016/S0001-8686(03)00018-6},
 url = {https://doi.org/10.1016/S0001-8686(03)00018-6}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {20},
-volume = {},
+@ARTICLE{Cochran2017,
+author = {Cochran, R. E. and Ryder, O. S. and Grassian, V. H. and Prather, K. A.},
+title = {{Sea Spray Aerosol: The Chemical Link between the Oceans,
+Atmosphere, and Climate}},
+journal = {Acc. Chem. Res.},
+year = {2017},
+volume = {50},
 number ={},
-pages = {},
-doi = {},
-url = {}
+pages = {599--604},
+doi = {10.1021/acs.accounts.6b00603},
+url = {https://pubs.acs.org/doi/full/10.1021/acs.accounts.6b00603}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {20},
-volume = {},
+@ARTICLE{Schill2015,
+author = {Schill, S. R. and Collins, D. B. and  Lee, C. and Morris, H. S. and Novak, G. A. and
+Prather, K. A. and Quinn, P. K. and Sultana, C. M. and Tivanski, A. V. and
+Zimmermann, K. and Cappa, C. D. and Bertram, T. H},
+title = {{The Impact of Aerosol Particle Mixing State on the Hygroscopicity of
+Sea Spray Aerosol}},
+journal = {ACS Cent. Sci.},
+year = {2015},
+volume = {1},
 number ={},
-pages = {},
-doi = {},
-url = {}
-}
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {20},
-volume = {},
+pages = {132--141},
+doi = {10.1021/acscentsci.5b00174},
+url = {https://pubs.acs.org/doi/10.1021/acscentsci.5b00174}
+} 
+@ARTICLE{Gurau2004,
+author = {Gurau, M. C. and Lim, S.-M. and Castellana, E. T. and Albertorio, F. and Kataoka, S. an Cremer, P. S.},
+title = {{On the Mechanism of the Hofmeister Effect}},
+journal = {J. Am. Chem. Soc.},
+year = {2004},
+volume = {126},
 number ={},
-pages = {},
-doi = {},
-url = {}
+pages = {10522},
+doi = {10.1021/ja047715c},
+url = {https://pubs.acs.org/doi/10.1021/ja047715c}
 }
 @ARTICLE{,
 author = {},
