--- a/main.tex
+++ b/main.tex
@@ -401,7 +401,7 @@ Aus den Ergebnissen nichtlinearer Suszeptibilitäten schließen wir, dass Wasser
 Für das Volumen- und Grenzflächensystem berechneten wir die Korrelationsfunktionen der HB-Population und erhielten die Reaktionsgeschwindigkeitskonstanten mit HB-Bildung und -Bruch. Um die HB-Dynamik an Grenzflächen zu analysieren, haben wir die Willard-Chandler-Momentan-Grenzfläche basierend auf der räumlichen Dichte bestimmt und ein statistisches Schema basierend auf dem Grenzflächen-HB (IHB)-Populationsoperator für die momentane Grenzfläche vorgeschlagen. Durch die Kombination dieser Methode mit Interfacial Molecule Sampling (IMS) können wir eine realistischere HB-Dynamik für die Wasser/Dampf-Grenzfläche erhalten. Diese Bombination der beiden Methoden gibt uns eine Lösung für die Frage, wie dick die Wasser/Dampf-Grenzfläche aus Sicht der HB-Dynamik ist.
 
 %
-Die IHB-Methode wird auch auf allgemeine Grenzflächensysteme, wie die Solvathüllen von Ionen in wässrigen Lösungen, erweitert. Der Unterschied zwischen der HB-Dynamik in der ersten Solvathülle von \Li und der von Nitrat-Wasser-Wasserstoff(H-)-Bindungen an Grenzflächen ist aus den Werten der HB-Relaxationszeit nicht ersichtlich. Für die Grenzfläche von alkalischen Iodidlösungen stellen wir außerdem fest, dass die Kationen das H-Brückennetzwerk außerhalb der ersten Solvathülle der Kationen selbst nicht verändern. Durch die HB (SHB)-Dynamik der Solvathülle haben wir festgestellt, dass die HB-Dynamik für die H-Brücken zwischen Wassermolekülen in der ersten und zweiten Solvathülle nicht empfindlich auf die Natur der Ionen reagiert. Im Gegensatz dazu wird die Umorientierungsdynamik für die Wassermoleküle in der ersten Solvathülle der Ionen durch die Ionen signifikant beeinflusst.
+Die IHB-Methode wird auch auf allgemeine Grenzflächensysteme, wie die Solvathüllen von Ionen in wässrigen Lösungen, erweitert. Der Unterschied zwischen der HB-Dynamik in der ersten Solvathülle von \Li und der von Nitrat-Wasser-Wasserstoff-Bindungen an Grenzflächen ist aus den Werten der HB-Relaxationszeit nicht ersichtlich. Für die Grenzfläche von alkalischen Iodidlösungen stellen wir außerdem fest, dass die Kationen das H-Brückennetzwerk außerhalb der ersten Solvathülle der Kationen selbst nicht verändern. Durch die HB (SHB)-Dynamik der Solvathülle haben wir festgestellt, dass die HB-Dynamik für die H-Brücken zwischen Wassermolekülen in der ersten und zweiten Solvathülle nicht empfindlich auf die Natur der Ionen reagiert. Im Gegensatz dazu wird die Umorientierungsdynamik für die Wassermoleküle in der ersten Solvathülle der Ionen durch die Ionen signifikant beeinflusst.
 
 %
 Schließlich fördert die Verteilung der Anzahl von H-Brücken pro OH-Gruppe an einer gegebenen momentanen Grenzfläche unser Verständnis des Unterschieds zwischen der alkalischen Nitratlösung/Dampf und der Wasser/Dampf-Grenzfläche. Insbesondere das Verhältnis der freien OH-Bindungen für Grenzflächen beeinflusst die Zerfallsrate der Reorientierungsrelaxation von Wassermolekülen und das $\Im\chi^{(2)}$-Spektrum der Alkalinitrat-Grenzfläche.
