The n-th time modification. Oct. 3rd

--- a/example.bib
+++ b/example.bib
@@ -9719,49 +9719,49 @@ pages = {10522},
 doi = {10.1021/ja047715c},
 url = {https://pubs.acs.org/doi/10.1021/ja047715c}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {20},
-volume = {},
+@ARTICLE{Kolb2017,
+author = {Kolb, B. and Lentz, L.C. and Kolpak, A.M.},
+title = {{Discovering charge density functionals and structure-property relationships with PROPhet: A general framework for coupling machine learning and first-principles methods}},
+journal = {Sci. Rep.},
+year = {2017},
+volume = {7},
 number ={},
-pages = {},
-doi = {},
-url = {}
+pages = {1192},
+doi = {10.1038/s41598-017-01251-z},
+url = {https://doi.org/10.1038/s41598-017-01251-z}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {20},
-volume = {},
+@ARTICLE{Behler2011,
+author = {Behler, J.},
+title = {{Neural network potential-energy surfaces in chemistry: a tool for large-scale simulations}},
+journal = {Phys. Chem. Chem. Phys.},
+year = {2011},
+volume = {13},
 number ={},
-pages = {},
-doi = {},
-url = {}
+pages = {17930--17955},
+doi = {10.1039/c1cp21668f},
+url = {https://pubs.rsc.org/en/content/articlelanding/2011/cp/c1cp21668f}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {20},
-volume = {},
+@ARTICLE{Behler2007,
+author = {Behler, J. and Parrinello, M.},
+title = {{Generalized neural-network representation of high-dimensional potential-energy surfaces}},
+journal = {Phys. Rev. Lett.},
+year = {2007},
+volume = {98},
 number ={},
-pages = {},
-doi = {},
-url = {}
+pages = {146401},
+doi = {10.1103/PhysRevLett.98.146401},
+url = {https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.98.146401}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {20},
-volume = {},
+@ARTICLE{Behler2014,
+author = {Behler, J.},
+title = {{Representing potential energy surfaces by high-dimensional neural network potentials}},
+journal = {J. Phys.},
+year = {2014},
+volume = {26},
 number ={},
-pages = {},
-doi = {},
-url = {}
+pages = {183001},
+doi = {10.1088/0953-8984/26/18/183001},
+url = {https://iopscience.iop.org/article/10.1088/0953-8984/26/18/183001}
 }
 @ARTICLE{,
 author = {},
